# Sentinel

./: .gitignore  README.md
.claude/: launch.json
.github/workflows/: ci.yml
contract/: .gitignore  Cargo.toml  README.md
contract/registry/: Cargo.toml
contract/registry/src/: lib.rs  test.rs
contract/registry/test_snapshots/test/: test_record_and_get.1.json  test_record_is_idempotent.1.json
contract/src/: lib.rs  test.rs
contract/test_snapshots/test/: test_deposit_after_deadline_panics.1.json  test_double_refund_calls_registry_each_time.1.json  test_double_refund_is_idempotent_in_registry.1.json  test_failure_and_refund.1.json  test_refund_when_goal_reached_panics.1.json  test_success_and_claim.1.json
docs/: README.md
frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/_backup/: App.freighter.tsx
frontend/api/: sponsor-fee-bump.ts
frontend/api/_lib/: validateSponsorable.test.ts  validateSponsorable.ts
frontend/src/: App.css  App.tsx  ConnectGate.tsx  ErrorBoundary.tsx  ExplorePage.tsx  FeedbackButton.css  FeedbackButton.tsx  Logo.tsx  ParticleField.tsx  ProfileMenu.css  ProfileMenu.tsx  ProfilePage.tsx  Root.tsx  TopNav.css  TopNav.tsx  icons.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/i18n/: LanguageContext.tsx  translations.ts  useLanguage.ts
frontend/src/lib/: contract.ts  errors.test.ts  errors.ts  stroops.test.ts  stroops.ts  wallet.ts  webhook.ts
frontend/src/watch/: WatchApp.css  WatchApp.tsx  types.ts
frontend/src/watch/components/: AlertsPanel.tsx  AnalyticsPanel.tsx  EventFeedPanel.tsx  SimulatorPanel.tsx
frontend/src/watch/lib/: alertRules.test.ts  alertRules.ts  argEncoding.test.ts  argEncoding.ts  format.test.ts  format.ts  sorobanWatch.ts
