[workspace]
members = [".", "registry"]
resolver = "2"

[package]
name = "sentinel-contract"
version = "0.1.0"
edition = "2021"
publish = false
description = "Sentinel - Stellar/Soroban crowdfunding contract (initialize / deposit / claim / refund)"

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = "22"

[dev-dependencies]
soroban-sdk = { version = "22", features = ["testutils"] }

# Release profile optimized for Soroban (small .wasm output)
[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
