[package]
name = "sentinel-registry"
version = "0.1.0"
edition = "2021"
publish = false
description = "Sentinel - kampanya sonuçlarını kaydeden registry sözleşmesi (inter-contract call hedefi)"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = "22"

[dev-dependencies]
soroban-sdk = { version = "22", features = ["testutils"] }
