[package]
name = "sentinel-registry"
version = "0.1.0"
edition = "2021"
publish = false
description = "Sentinel - registry contract that records campaign outcomes (inter-contract call target)"

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = "22"

[dev-dependencies]
soroban-sdk = { version = "22", features = ["testutils"] }
